[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/IntroController.gd" type="Script" id=1]
[ext_resource path="res://assets/intro/intro1.png" type="Texture" id=2]
[ext_resource path="res://assets/intro/intro2.png" type="Texture" id=3]
[ext_resource path="res://assets/intro/pjoter.png" type="Texture" id=4]
[ext_resource path="res://audio/DJ SOMSIAD.wav" type="Sample" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Intro1",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Intro3",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Intro2",
"speed": 5.0
} ]

[sub_resource type="SampleLibrary" id=2]

"samples/DJ SOMSIAD" = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[node name="Intro" type="Node2D"]

script/script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 510.014, 301.64 )
transform/scale = Vector2( 1.21718, 0.783346 )
frames = SubResource( 1 )
animation = "Intro1"

[node name="Timer1" type="Timer" parent="."]

process_mode = 1
wait_time = 7.0
one_shot = false
autostart = false

[node name="Timer2" type="Timer" parent="."]

process_mode = 1
wait_time = 6.0
one_shot = false
autostart = false

[node name="Timer3" type="Timer" parent="."]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="Music" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]


